--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gh-pages -d ../sign-in-form"
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -16,7 +16,7 @@
   "bugs": {
     "url": "https://github.com/OmarMoMostafa/Sign-In-Form-Page/issues"
   },
-  "homepage": "https://github.com/OmarMoMostafa/Sign-In-Form-Page#readme",
+  "homepage": "https://github.com/OmarMoMostafa/Sign-In-Form-Page",
   "dependencies": {
     "gh-pages": "^3.2.3"
   }
